update README; tidy and improve code

--- a/README.Rmd
+++ b/README.Rmd
@@ -73,37 +73,40 @@ options(width=120)
 ```
 
 
-------
-
 
 ## 2 Usage
 
 Data may downloaded for a particular city and stored in an `SQLite3` database
-with the simple command:
+with the simple command,
 ```{r, eval=FALSE}
-store_bikedata (city = 'nyc', bikedb = 'bikedb')
+store_bikedata (city = 'nyc', bikedb = 'bikedb', dates = 201601:201603)
+# [1] 2019513
 ```
-where the `bikedb` parameter provides the name for the database.  The primary
-objects returned by the `bikedata` packages are 'trip matrices' which contain
-aggregate numbers of trips between each pair of stations. These can then be
-obtained with:
+where the `bikedb` parameter provides the name for the database, and the
+optional argument `dates` can be used to specify a particular range of dates
+(Jan-March 2016 in this example).  The `store_bikedata` function returns the
+total number of trips added to the specified database. The primary objects
+returned by the `bikedata` packages are 'trip matrices' which contain aggregate
+numbers of trips between each pair of stations. These are extracted from the
+database with:
 ```{r, eval=FALSE}
-tm <- bike_tripmat ('bikedb')
+tm <- bike_tripmat (bikedb = 'bikedb')
 dim (tm); format (sum (tm), big.mark=',')
 ```
 ```{r, echo=FALSE}
-c (689, 689)
-"36,902,025"
+c (518, 518)
+"2,019,513"
 ```
-Note that the associated databases can be very large (in the above case, almost
-37 million individual trips), and extracting these data can take quite some
-time.
+During the specified time period there were just over 2 million trips between
+518 bicycle docking stations.  Note that the associated databases can be very
+large, particularly in the absence of `dates` restrictions, and extracting these
+data can take quite some time.
 
 A summary of all data contained in a given database can be produced as
 ```{r, eval=FALSE}
 bike_summary_stats (bikedb = 'bikedb')
 #>    num_trips num_stations          first_trip       last_trip latest_files
-#> ny  36902025          689 2014-11-01 00:00:11 2017-01-31 9:59        TRUE
+#> ny  2019513          518 2016-01-01 00:00    2016-03-31 23:59        FALSE
 ```
 The final field, `latest_files`, indicates whether the files in the database are
 up to date with the latest published files.
@@ -118,7 +121,7 @@ directly viewed with
 bike_datelimits (bikedb = 'bikedb')
 ```
 ```{r, echo=FALSE}
-res <- c ("2013-07-01 00:00:00", "2017-01-19 08:08:17")
+res <- c ("2016-01-01 00:00", "2016-03-31 23:59")
 names (res) <- c ("first", "last")
 res
 ```
@@ -129,18 +132,28 @@ units must always precede smaller units (so years before months before days;
 hours before minutes before seconds). The following examples illustrate the
 variety of acceptable formats for these arguments.
 ```{r, eval=FALSE}
-tm <- bike_tripmat ('bikedb', start_date="20160101")
-tm <- bike_tripmat ('bikedb', start_date=20140901, end_date="14/09/03")
+tm <- bike_tripmat ('bikedb', start_date="20160102")
+tm <- bike_tripmat ('bikedb', start_date=20160102, end_date="16/02/28")
 tm <- bike_tripmat ('bikedb', start_time=0, end_time=1) # 00:00 - 01:00
-tm <- bike_tripmat ('bikedb', start_date=20150101, end_date="15,12,31",
+tm <- bike_tripmat ('bikedb', start_date=20160101, end_date="16,02,28",
                  start_time=6, end_time=24) # 06:00 - 23:59
 tm <- bike_tripmat ('bikedb', weekday=1) # 1 = Sunday
 tm <- bike_tripmat ('bikedb', weekday=c('m', 'Th'))
-tm <- bike_tripmat ('bikedb', weekday=2:6, start_time=6:30, end_time=10:15:25)
+tm <- bike_tripmat ('bikedb', weekday=2:6, 
+                    start_time="6:30", end_time="10:15:25")
 ```
 
 ### 2.2 Filtering trips by demographic characteristics
 
-(coming soon ...)
-
-
+Trip matrices can also be filtered by demographic characteristics through
+specifying the three additional arguments of `member`, `gender`, and
+`birth_year`. `member = 0` is equivalent to `member = FALSE`, and `1` equivalent
+to `TRUE`. `gender` is specified numerically such that values of `2`, `1`, and
+`0` respectively translate to female, male, and unspecified. The following lines
+demonstrate this functionality
+```{r, eval=FALSE}
+sum (bike_tripmat ('bikedb', member = 0))
+sum (bike_tripmat ('bikedb', gender = 'female'))
+sum (bike_tripmat ('bikedb', weekday = 'sat', birth_year = 1980:1990,
+                   gender = 'unspecified'))
+```
